--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -11,6 +11,7 @@
 
 .product-details {
   position: relative;
+  margin-top: -1rem;
   text-align: left;
   overflow: hidden;
   padding: 30px;
@@ -28,68 +29,8 @@
 }
 
 .card-container .product-details>p {
-  text-align: center;
-  font-size: 1rem;
+  font-size: 15px;
   color: #7d7d7d;
-}
-
-.purchase-container {
-  position: absolute;
-  bottom: 7.5%;
-  left: 22.8%;
-}
-
-.purchase-btn {
-  transform: translateY(0px);
-  transition: 0.3s linear;
-  background: #1a66ff;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  color: #eee;
-  padding: 0;
-  margin: 0;
-}
-
-.purchase-btn:hover {
-  transform: translateY(-6px);
-}
-
-.purchase-btn span {
-  transition: transform 0.3s;
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 1.2em;
-  margin: 0;
-}
-
-.purchase-btn .price,
-.shopping-cart {
-  background: #333;
-  border: 0;
-  margin: 0;
-}
-
-.purchase-btn .price {
-  transform: translateX(-10%);
-  padding-right: 15px;
-}
-
-.purchase-btn .shopping-cart {
-  transform: translateX(-100%);
-  position: absolute;
-  background: #333;
-  z-index: 1;
-  left: 0;
-  top: 0;
-}
-
-.purchase-btn .buy {
-  z-index: 3;
-  font-weight: bolder;
 }
 
 .product-image {
@@ -126,8 +67,17 @@
   text-align: center
 }
 
+.info-list {
+  position: absolute;
+  left: -1rem;
+}
+
 .product-image:hover .info {
   transform: translateX(0);
+}
+
+.force-show {
+  transform: translateX(0) !important;
 }
 
 .info ul li {
@@ -135,7 +85,7 @@
 }
 
 .info ul li:hover {
-  transform: translateX(50px) scale(1.3);
+  transform: translateX(1rem);
 }
 
 .product-image:hover img {
