--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,13 @@
   position: sticky;
   display: flex;
   justify-content: center;
+  align-items: center;
   top: 0;
   gap: 2rem;
-  background-color: #272727;
+  background-color: #272727e9;
   width: 100%;
-  opacity: 0.95;
   z-index: 999;
+  font-size: 1rem;
 }
 
 .nav-menu-item {
@@ -45,57 +46,4 @@
   transform: translate(-50%, -30%);
   transition: all 0.2s ease-in-out;
   opacity: 1;
-}
-
-.header-logout-btn {
-  position: relative;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  border-radius: 100vw;
-  background-color: transparent;
-  color: #fafafa;
-  border: solid 1px #fafafa;
-  overflow: hidden;
-  cursor: pointer;
-  transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.logout-btn-text {
-  position: relative;
-  z-index: 2;
-}
-
-.logout-btn-fill {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  padding-bottom: 100%;
-  transform: translateY(-50%) rotate(180deg);
-}
-
-.logout-btn-fill::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(153, 20, 20);
-  border-radius: 50%;
-  transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
-  transform: translateY(-100%);
-}
-
-.header-logout-btn:hover {
-  border-color: rgb(153, 20, 20);
-
-}
-
-.header-logout-btn:hover .logout-btn-fill {
-  transform: translateY(-50%) rotate(0);
-}
-
-.header-logout-btn:hover .logout-btn-fill::after {
-  transform: translateY(0);
 }
