--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -6,7 +6,7 @@ h2 {
   text-align: center;
 }
 
-p {
+.sign-up-message {
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
@@ -48,7 +48,7 @@ button.sign-up-btn {
   border-color: #FFFFFF;
 }
 
-form {
+.login-form {
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
@@ -163,13 +163,14 @@ input {
   margin-bottom: 1rem;
 }
 
-select {
+.user-type-select {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.22);
   padding: 0.5em 2em 0.5em 1em;
   background: #4d5061;
   color: white;
   border: 0;
   border-radius: 0.5rem;
+  margin-left: 0.2rem;
 }
 
 .custom-arrow {
