--- a/src/components/CardItemList/CardItemList.css
+++ b/src/components/CardItemList/CardItemList.css
@@ -11,11 +11,11 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px;
-  padding: 1.2rem;
+  padding: 0 1.2rem;
   transform: translate(-130%, 10%);
 }
 
 .form-label {
-  font-size: 1.1rem;
+  font-size: 1rem;
   text-align: center;
 }
